--- a/Modelo impressão.html
+++ b/Modelo impressão.html
@@ -314,7 +314,7 @@ ${dado["Comp. Apuração"]}
 ${dado["Comp. Referência"]}
 </td>
 <td style="border-right: 3px solid white">
-${dado["Nome Trabalhador"]}
+${dado["Nome Trabalhador"].slice(0,50)}
 </td>
 <td style="border-right: 3px solid white">
 ${dado["Matrícula"]}
@@ -651,7 +651,7 @@ ${dado["Comp. Apuração"]}
 ${dado["Comp. Referência"]}
 </td>
 <td style="border-right: 3px solid white">
-${dado["Nome Trabalhador"]}
+${dado["Nome Trabalhador"].slice(0,50)}
 </td>
 <td style="border-right: 3px solid white">
 ${dado["Matrícula"]}
@@ -1218,7 +1218,7 @@ ${dado["Comp. Apuração"]}
 ${dado["Comp. Referência"]}
 </td>
 <td style="border-right: 3px solid white">
-${dado["Nome Trabalhador"]}
+${dado["Nome Trabalhador"].slice(0,50)}
 </td>
 <td style="border-right: 3px solid white">
 ${dado["Matrícula"]}
